2001-08-28  Alex Larsson  <alexl@redhat.com>

	* gtk/gtkwidget.c (gtk_widget_class_init):
	Make unrealize GTK_RUN_LAST.

Mon Aug 27 22:00:41 2001 Manish Singh <yosh@gimp.org>

	* gtk/gtkradiobutton.c: fix silly cut'n'paste error,
	with_label and with_mnemonic should create radio buttons, not
	check buttons

Mon Aug 27 15:28:56 2001  Jonathan Blandford  <jrb@redhat.com>

	* tests/testtreefocus.c (main): Fix to use GtkSelectionMode.
	* tests/treestoretest.c (make_window): ditto
	* demos/gtk-demo/main.c (create_tree): ditto
	* demos/gtk-demo/stock_browser.c (do_stock_browser): ditto.

Mon Aug 27 15:18:14 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeselection.c (gtk_tree_selection_set_mode): Use the
	GTK selection types rather than GtkTreeSelectionMode.

	* docs/Changes-2.0: Add comment about selection change.

Mon Aug 27 14:21:30 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkenums.h (GtkSelectionMode): deprecate
	GTK_SELECTION_EXTENDED.

	* gtk/gtkclist.c: Remove old GTK_SELECTION_MULTIPLE behavior.
	Make GTK_SELECTION_EXTENDED be GTK_SELECTION_MULTIPLE.

	* gtk/gtkctree.c: ditto

	* gtk/gtklist.c: ditto

	* gtk/gtktree.c: ditto

Mon Aug 27 14:18:12 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmenubar.h (gtk_menu_bar_prepend): Fix a cuple
	of typos in compat macros. (#59624, Skip Montaro)

Sun Aug 26 20:00:00 2001  Owen Taylor  <otaylor@redhat.com>

	* configure.in acinclude.m4: Use autoconf 2.13/2.50 compat
	macro.

	 (patch from ERDI Gergo  <cactus@cactus.rulez.org>, #58920)
 
 	* gtk/gtkmenuitem.c (gtk_menu_item_set_right_justified): Change
	interface to be a standard setter from gtk_menu_item_right_justify.
 	(gtk_menu_item_get_right_justified): a getter to go with the setter

	* gtk/gtkmenuitem.h: Add a deprecated compat macro for
	gtk_menu_item_right_justify.

	* demos/gtk-demo/menus.c tests/testgtk.c: Switch to 
	gtk_menu_item_set_right_justified.
 
2001-08-27  Jens Finke <jens@gnome.org>
